--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,13 +8,26 @@
 </head>
 <body>
     <h1> Cat facts</h1>
-    <ul id="cat-facts-list">
+    <ol id="cat-facts-list">
 
-    </ul>
+    </ol>
     
     <input id = "number-input" type="number" placeholder="chose a number"/>
     <button id="add-button"> Add a cat fact </button>
+    <button id="addrandom-button"> Add a cat fact </button>
     <button id = "remove-button"> Remove a cat fact</button>
 </body>
 <script src="index.js"></script>
 </html>
+
+
+
+<!-- function checkExistence() {
+    let actualFact = apiCatFact()
+    for (i=0; i<= document.querySelectorAll('.cat-facts-list li').length; i++) 
+        if (actualFact == document.querySelectorAll('.cat-facts-list li')[i]) {
+            apiCatFact()
+        } else {
+
+        } 
+} -->
